# Stafra-wgpu

./: .gitignore  Build_and_run.bat  Cargo.toml  README.md  build_and_run.bat  build_and_run.sh  build_and_run_debug.sh  build_and_run_debug_native.sh  build_and_run_native.bat  build_and_run_release.bat  build_rust_only.bat
.github/workflows/: build_project.yml
src/: app_state.rs  dummy_waker.rs  event_loop_native.rs  event_loop_web.rs  index.html  lib.rs  main.frag  main.rs  main.vert  stafra.css  stafra.html  stafra_board_state_bindings.rs  stafra_initial_state_bindings.rs  stafra_state.rs  stafra_static_state.rs  stafra_static_state_bindings.rs  video_record_state.rs
src/shaders/clear_board/: clear_4_corners.comp  clear_4_corners.wgsl  clear_4_sides.comp  clear_4_sides.wgsl  clear_center.comp  clear_center.wgsl
src/shaders/click_rule/: bake_click_rule.comp  bake_click_rule.wgsl
src/shaders/mip/: final_state_generate_next_mip.comp  final_state_generate_next_mip.wgsl
src/shaders/next_step/: next_step.comp  next_step.wgsl
src/shaders/render/: click_rule_render_state_fs.wgsl  click_rule_render_state_vs.wgsl  render_state.frag  render_state.vert  render_state_fs.wgsl  render_state_vs.wgsl
src/shaders/state_transform/: clear_restriction.wgsl  clear_stability.comp  clear_stability.wgsl  filter_restriction.wgsl  final_state_transform.comp  final_state_transform.wgsl  initial_restriction_transform.wgsl  initial_state_transform.comp  initial_state_transform.wgsl
