[package]
authors = ["Sixshaman <shaman1234@gmail.com>"]
edition = "2021"
name = "stafra_wgpu"
version = "0.1.2"
resolver = "2"

[dependencies.wasm-bindgen]
git = "https://github.com/Sixshaman/wasm-bindgen.git"

[dependencies.web-sys]
git = "https://github.com/Sixshaman/wasm-bindgen.git"
features = ["Document", "Window", "DomException",
            "HtmlCanvasElement", "CanvasRenderingContext2d",
            "HtmlAnchorElement", "HtmlImageElement", "HtmlButtonElement", "HtmlVideoElement",
            "HtmlSelectElement", "HtmlOptionElement", "HtmlOptionsCollection", "HtmlInputElement",
            "ImageData", "FileList", "File", "FileReader", "Url",
            "VideoPixelFormat", "VideoFrame", "VideoFrameBufferInit",
            "VideoEncoder", "VideoEncoderInit", "VideoEncoderConfig",
            "EncodedVideoChunk", "EncodedVideoChunkMetadata", "HardwareAcceleration",
            "MediaSource", "MediaStream", "MediaRecorder",
            "SourceBuffer", "SourceBufferList",
            "VideoTrack", "VideoTrackList"]

[dependencies.js-sys]
git = "https://github.com/Sixshaman/wasm-bindgen.git"

[dependencies.wasm-bindgen-futures]
git = "https://github.com/Sixshaman/wasm-bindgen.git"

[dependencies]
wgpu = {git = "https://github.com/Sixshaman/wgpu.git", branch = "compat"}
winit = {git = "https://github.com/Sixshaman/winit.git", branch = "compat"}
console_log = {git = "https://github.com/Sixshaman/console_log.git", branch = "compat"}
console_error_panic_hook = {git = "https://github.com/Sixshaman/console_error_panic_hook.git", branch = "compat"}
image = "0.23.14"
cgmath = "0.17"
env_logger = "0.8.3"
log = "0.4"
futures = "0.3.14"

[[bin]]
name = "stafra_native"
path = "src/main.rs"

[lib]
name = "stafra"
path = "src/lib.rs"
crate-type = ["cdylib"]