[package]
authors = ["Sixshaman <shaman1234@gmail.com>"]
edition = "2021"
name = "stafra_wgpu"
version = "1.0.0"
resolver = "2"

[dependencies.web-sys]
version = "=0.3.58"
features = ["Document", "Window", "DomException", "Location", "History",
            "Event", "BlobEvent", "MouseEvent",
            "Url", "UrlSearchParams", "FileReader", "FileList", "File",
            "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData",
            "HtmlImageElement", "HtmlVideoElement",
            "HtmlAnchorElement", "HtmlButtonElement",
            "HtmlSelectElement", "HtmlOptionElement", "HtmlOptionsCollection", "HtmlInputElement",
            "VideoFrame", "VideoFrameBufferInit", "VideoPixelFormat",
            "EncodedVideoChunk", "EncodedVideoChunkMetadata", "HardwareAcceleration",
            "VideoEncoder", "VideoEncoderInit", "VideoEncoderConfig", "VideoEncoderEncodeOptions",
            "VideoDecoder", "VideoDecoderInit", "VideoDecoderConfig",
            "MediaRecorder", "MediaRecorderOptions",
            "MediaStream", "MediaStreamTrackGenerator", "MediaStreamTrackGeneratorInit",
            "WritableStream", "WritableStreamDefaultWriter"]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
wasm-bindgen = "=0.2.81"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
wgpu = "0.13.1"
winit = "0.26.1"
image = "0.23.14"
cgmath = "0.17"
env_logger = "0.8.3"
log = "0.4"

[[bin]]
name = "stafra_native"
path = "src/main.rs"

[lib]
name = "stafra"
path = "src/lib.rs"
crate-type = ["cdylib"]